test/errors/type/collections/set/__ge.yasl
echo mt.lookup(collections.set(), .__ge)(collections.set(), true)
